--- a/style.css
+++ b/style.css
@@ -135,7 +135,7 @@ body{
     font-size: 20px;
     font-weight: 300;
     text-decoration: none;
-    color: #FFFFFF;
+    color: #464646;
 }
 .head .nav li:nth-child(4) a{
     font-size: 20px;
